# hacking

./: .gitignore  .pre-commit-config.yaml  CLEANUP_SUMMARY.md  COMMAND_LINE_ARGUMENTS.md  Command.md  Makefile  NEW_FEATURES_v2.1.md  README.md  TODO.md  auto_git_sync.sh  cleanup.sh  command.md  config.yaml  config__.yaml  conftest.py  create_service.sh  device_rules.yaml  main.py  nohup.out  patch_pi.sh  pyproject.toml  pytest.ini  pytest_log.txt  pytest_output.txt  requirements-dev.txt  requirements.txt  requirements_pinned.txt  setup.sh  test_fixes.py
.github/workflows/: ci.yml
MagicMock/mock.db/: 140257168261536  547009885328
data/: analysis.py  capture.py  cli.py  config.py  config.yaml  controllers.py  database.py  device_profiler.py  reporting.py  state.py  template.html  tui.css  tui.py  utils.py
examples/: enhanced_analysis_example.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_077edaaccf312172___init___py.html  z_077edaaccf312172_clustering_py.html  z_077edaaccf312172_evaluation_py.html  z_077edaaccf312172_inference_py.html  z_077edaaccf312172_models_py.html  z_077edaaccf312172_training_py.html  z_12abc53664356719___init___py.html  z_12abc53664356719_data_validator_py.html  z_12abc53664356719_feature_extractor_py.html  z_12abc53664356719_wifi_processor_py.html  z_1675ea0303d6710a___init___py.html  z_1675ea0303d6710a_data_models_py.html  z_1675ea0303d6710a_database_py.html  z_1675ea0303d6710a_state_py.html  z_5232ffe803430b30___init___py.html  z_5232ffe803430b30_async_utils_py.html  z_5232ffe803430b30_caching_py.html  z_5232ffe803430b30_config_py.html  z_5232ffe803430b30_constants_py.html  z_5232ffe803430b30_controllers_py.html  z_5232ffe803430b30_exceptions_py.html  z_5232ffe803430b30_health_py.html  z_5232ffe803430b30_led_controller_py.html  z_5232ffe803430b30_logging_config_py.html  z_5232ffe803430b30_metrics_py.html  z_5232ffe803430b30_pre_run_checks_py.html  z_5232ffe803430b30_recovery_py.html  z_5232ffe803430b30_utils_py.html  z_5232ffe803430b30_validation_py.html  z_60a1a5af3f73cd49___init___py.html  z_60a1a5af3f73cd49_advanced_visualizer_py.html  z_60a1a5af3f73cd49_wifi_visualizer_py.html  z_8eae2c0bde360581___init___py.html  z_8eae2c0bde360581_classification_model_py.html  z_8eae2c0bde360581_clustering_model_py.html  z_8eae2c0bde360581_ensemble_model_py.html  (+19 more)
plugins/: README.md  __init__.py  analysis_clustering_advanced.py  analysis_ensemble_models.py  analysis_reinforcement_learning.py  analysis_sankey.py  analysis_umap_plot.py
plugins/clustering_advanced/: __init__.py  plugin.py  requirements.txt
plugins/ensemble_models/: __init__.py  plugin.py  requirements.txt
plugins/example_plugin/: __init__.py  plugin.py  requirements.txt
plugins/reinforcement_learning/: __init__.py  plugin.py  requirements.txt
plugins/sankey/: __init__.py  plugin.py  requirements.txt
plugins/umap_plot/: __init__.py  plugin.py  requirements.txt
pytest/: Makefile  README.md  conftest.py  plugin_discovery.py  pytest.ini  requirements-test.txt  test_analysis.py  test_app.py  test_capture.py  test_controllers.py  test_error_handling.py  test_integration.py  test_performance.py  test_presentation.py  test_storage.py  test_utils.py
scripts/: code_quality.py  plugin_health_check.py  plugin_manager.py
test/: device_classifier.joblib  events.db-shm  events.db-wal
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/performance/: test_benchmarks.py  test_memory_profiling.py
tests/security/: test_security.py
tests/unit/: test_data_processing.py  test_ml_models.py  test_utils.py  test_utils_failed.py
wlan_tool/: __init__.py  async_processing.py  async_utils.py  caching.py  config.py  constants.py  controllers.py  exceptions.py  health.py  led_controller.py  logging_config.py  metrics.py  pre_run_checks.py  recovery.py  utils.py  utils_enhanced.py  validation.py
wlan_tool/analysis/: __init__.py  advanced_metrics.py  clustering.py  deep_packet_inspection.py  device_classification.py  device_profiler.py  enhanced_analysis.py  ensemble.py  logic.py  models.py  training.py
wlan_tool/assets/: manuf
wlan_tool/capture/: __init__.py  enhanced_sniffer.py  sniffer.py  strategy_pattern.py
wlan_tool/data_processing/: __init__.py  data_validator.py  feature_extractor.py  wifi_processor.py
wlan_tool/ml/: __init__.py  clustering.py  evaluation.py  inference.py  model_factory.py  models.py  training.py
wlan_tool/ml_models/: __init__.py  classification_model.py  clustering_model.py  ensemble_model.py
wlan_tool/presentation/: __init__.py  cli.py  live_tui.py  reporting.py  tui.py
wlan_tool/storage/: __init__.py  (+3 more)
(+19 files in other folders)
